[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "python-dotenv>=1.2.1",
    "langchain-ollama>=0.1.0",
    "gradio>=6.14.0",
    "requests>=2.32.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "beautifulsoup4>=4.14.3",
]
